--- a/sources/sections/04-terms-and-defs.adoc
+++ b/sources/sections/04-terms-and-defs.adoc
@@ -18,6 +18,66 @@ Many of these definitions depend upon the model given in <<annex-C,Annex C: ModS
 
 a <<RequirementsClass-definition,requirements class>> or a <<RequirementsModule-definition,requirements module>> with no direct dependencies on other requirements classes or modules and their associated <<ComplianceClass-definition,compliance test class>> or <<ComplianceModule-definition,compliance test module>>. 
 
+[[Dependency-definition]]
+
+==== Dependency
+
+a module (the target) which is used, produced or associated to by an implementation of the source module. 
+
+[[DirectDependency-definition]]
+
+==== Direct Dependency
+
+another requirements class (the dependency) whose requirements are defined to also be requirements of this requirements class
+
+NOTE: A direct dependency (of a requirements class) of the current requirements class will have the same standardization target as the current requirements class. This is another ways of saying that the current requirements class extends, or uses all the aspects of the direct dependency (or a requirements class). Any tests associated to this dependency can be applied to this requirements class. 
+
+When testing a direct dependency of a requirements class, the standardization target is directly subject to the test in the specified conformance test class of the direct dependency of a requirements class.  
+
+[[Extension-definition]]
+
+==== Extension
+
+requirements class which has a direct dependency on another requirements class 
+
+NOTE: Here an extension of a requirements class is defined on requirements class so that their implementation may be software extensions in a manner analogous to the extension relation between the requirements classes.  
+
+[[IndirectDependency-definition]]
+
+==== Indirect Dependency
+
+requirements class with a different standardization target which is used, produced or associated to by the implementation of this requirements class 
+
+NOTE: In this instance, as opposed to the direct dependency of a requirements class, the test against the consumable or product used or produced by the requirements class does not directly test the requirements class, but tests only its side effects. Hence, a particular type of feature service could be required to produce valid XML documents, but the test of validity for the XML document is not directly testing the service, but only indirectly testing the validity of its output. Direct dependencies test the same standardization target, but indirect dependencies test related but different standardization targets. +
+For example, if a DRM-enabled service is required to have an association to a licensing service, then the requirements of a licensing service are indirect requirements for the DRM-enabled service. Such a requirement may be stated as the associated licensing service has a certificate of conformance of a particular kind.  
+
+[[LeafPackage-definition]]
+
+==== Leaf Package
+
+UML model package that does not contain any subpackages, but contains classifiers 
+[UML]  
+
+[[Module-definition]]
+
+==== Module
+
+each of a set of standardized parts or independent units that can be used to construct a more complex structure
+
+Note: The concept ‘module’ is key to the ModSpec structure and model. Modules have a direct relationship to the concept of building blocks. The power of the concept is that modules can be reused in different systems (specify once, use many). Modules can be imported from other programs. Modules can be replaced without affecting the rest of the system. 
+
+[[Profile-definition]]
+
+==== Profile
+
+specification or standard consisting of a set of references to one or more base standards and/or other profiles, and the identification of any chosen conformance test classes, conforming subsets, options and parameters of those base standards, or profiles necessary to accomplish a particular function. 
+
+NOTE:  In the usage of the ModSpec, a profile will be a set of requirements classes or conformance classes (either preexisting or locally defined) of the base standards.
+
+This means that a standardization target being conformant to a profile implies that the same target is conformant to the standards referenced in the profile.
+
+[ISO/IEC TR 10000-1]    
+
 === General Terms and Definitions
 
 [[BestPractice-definition]]
@@ -35,12 +95,6 @@ expression in a document conveying non-normative information
 NOTE: Includes all statements in a document not part of the normative requirements, recommendations, permissions, or conformance tests. Included for completeness. 
 
 [[Module-definition]]
-
-==== Module
-
-each of a set of standardized parts or independent units that can be used to construct a more complex structure
-
-Note: The concept ‘module’ is key to the ModSpec structure and model. Modules have a direct relationship to the concept of building blocks. The power of the concept is that modules can be reused in different systems (specify once, use many). Modules can be imported from other programs. Modules can be replaced without affecting the rest of the system. 
 
 [[NormativeStatement-definition]]
 
@@ -102,58 +156,6 @@ unique requirements class that must be satisfied by any conformant standardizati
 NOTE:  The core requirements class is unique because if it was possible to have more than one, then each core would have to be implemented to pass any conformance test class, and thus would have to be contained in any other core. The core may be empty, or all or part of another standard or related set of standards. 
 
 The core can refer to this requirements class, its associated conformance test class or the software module that implements that requirements class.  
-
-[[Dependency-definition]]
-
-==== Dependency
-
-a module (the target) which is used, produced or associated to by an implementation of the source module. 
-
-[[DirectDependency-definition]]
-
-==== Direct Dependency
-
-another requirements class (the dependency) whose requirements are defined to also be requirements of this requirements class
-
-NOTE: A direct dependency (of a requirements class) of the current requirements class will have the same standardization target as the current requirements class. This is another ways of saying that the current requirements class extends, or uses all the aspects of the direct dependency (or a requirements class). Any tests associated to this dependency can be applied to this requirements class. 
-
-When testing a direct dependency of a requirements class, the standardization target is directly subject to the test in the specified conformance test class of the direct dependency of a requirements class.  
-
-[[Extension-definition]]
-
-==== Extension
-
-requirements class which has a direct dependency on another requirements class 
-
-NOTE: Here an extension of a requirements class is defined on requirements class so that their implementation may be software extensions in a manner analogous to the extension relation between the requirements classes.  
-
-[[IndirectDependency-definition]]
-
-==== Indirect Dependency
-
-requirements class with a different standardization target which is used, produced or associated to by the implementation of this requirements class 
-
-NOTE: In this instance, as opposed to the direct dependency of a requirements class, the test against the consumable or product used or produced by the requirements class does not directly test the requirements class, but tests only its side effects. Hence, a particular type of feature service could be required to produce valid XML documents, but the test of validity for the XML document is not directly testing the service, but only indirectly testing the validity of its output. Direct dependencies test the same standardization target, but indirect dependencies test related but different standardization targets. +
-For example, if a DRM-enabled service is required to have an association to a licensing service, then the requirements of a licensing service are indirect requirements for the DRM-enabled service. Such a requirement may be stated as the associated licensing service has a certificate of conformance of a particular kind.  
-
-[[LeafPackage-definition]]
-
-==== Leaf Package
-
-UML model package that does not contain any subpackages, but contains classifiers 
-[UML]  
-
-[[Profile-definition]]
-
-==== Profile
-
-specification or standard consisting of a set of references to one or more base standards and/or other profiles, and the identification of any chosen conformance test classes, conforming subsets, options and parameters of those base standards, or profiles necessary to accomplish a particular function. 
-
-NOTE:  In the usage of the ModSpec, a profile will be a set of requirements classes or conformance classes (either preexisting or locally defined) of the base standards.
-
-This means that a standardization target being conformant to a profile implies that the same target is conformant to the standards referenced in the profile.
-
-[ISO/IEC TR 10000-1]    
 
 === Core Terms and Definitions
 
