--- a/sources/sections/06-req-class.adoc
+++ b/sources/sections/06-req-class.adoc
@@ -397,11 +397,15 @@ The following requirements define the content of the core.
 [[req-20]]
 include::../requirements/core/REQ20_core-requirements-separate.adoc[]
 
+The following states that any recommendations applicable to the entire standard are in the core document.
+
 [[req-21]]
-include::../requirements/core/REQ21_requirements-and-dependencies-2.adoc[]
+include::../requirements/core/REQ21_general-recommendations-core.adoc[]
 
 [[req-22]]
 include::../requirements/core/REQ22_requirements-and-dependencies-3.adoc[]
+
+The following recommendation is guidance to the group developing a standrd to keep the core as simple as possible.
 
 [[rec-4]]
 include::../recommendations/core/REC004-simple-core.adoc[]
