--- a/sources/sections/06-req-class.adoc
+++ b/sources/sections/06-req-class.adoc
@@ -402,8 +402,10 @@ The following states that any recommendations applicable to the entire standard 
 [[req-21]]
 include::../requirements/core/REQ21_general-recommendations-core.adoc[]
 
+The following states that all non-core requirements classes have a standardization target type that is a sub-type of the core.
+
 [[req-22]]
-include::../requirements/core/REQ22_requirements-and-dependencies-3.adoc[]
+include::../requirements/core/REQ22_req-class-not-core-stt-subtype-of-core.adoc[]
 
 The following recommendation is guidance to the group developing a standard to keep the core as simple as possible.
 
