--- a/sources/sections/aa-abstract-conformance.adoc
+++ b/sources/sections/aa-abstract-conformance.adoc
@@ -29,8 +29,7 @@ associated conformance test class.
 
 Each component of the standard, including requirements, requirements modules,
 requirements classes, conformance test cases, conformance modules and conformance
-classes shall be assigned a URI as specified by the OGC Naming Authority or its
-equivalent.
+classes _SHALL_ be assigned a unique identifier and/or label.
 
 . Test Purpose: Verify that this requirement is satisfied.
 . Test Method: Inspect the document to verify the above.
@@ -39,8 +38,7 @@ equivalent.
 
 ==== Requirements on vocabulary are appropriately placed
 
-Requirements on the use and interpretation of vocabulary shall be in the
-requirements class where that use or interpretation is used.
+Requirements on the use and interpretation of vocabulary _SHALL_ be in the requirements class where that use or interpretation is used.
 
 . Test Purpose: Verify that this requirement is satisfied.
 . Test Method: Inspect the document to verify the above.
@@ -49,7 +47,7 @@ requirements class where that use or interpretation is used.
 
 ==== Requirements have a single target
 
-Each requirement in a conformant standard shall have a single standardization
+Each requirement in a conformant standard _SHALL_ have a single standardization
 target type.
 
 . Test Purpose: Verify that this requirement is satisfied.
@@ -60,7 +58,7 @@ target type.
 ==== Conformance test classes have a single target
 
 All conformance tests in a single conformance test class in a conformant
-standard shall have the same standardization target.
+standard _SHALL_ have the same standardization target.
 
 . Test Purpose: Verify that this requirement is satisfied.
 . Test Method: Inspect the document to verify the above.
@@ -69,9 +67,7 @@ standard shall have the same standardization target.
 
 ==== Requirements are organized by clauses
 
-The requirements shall be grouped together in clauses (numbered sections) of the
-document in a strictly hierarchical manner, consistent with requirements modules and
-requirements classes.
+Requirements _SHALL_ be grouped together in clauses (numbered sections) of the document in a strictly hierarchical manner, consistent with requirements classes.
 
 . Test Purpose: Verify that this requirement is satisfied.
 . Test Method: Inspect the document to verify the above.
@@ -80,7 +76,7 @@ requirements classes.
 
 ==== Conformance test classes are consistent with requirements classes
 
-The requirements structure of the document shall be in a logical correspondence to
+The requirements structure of the document _SHALL_ be in a logical correspondence to
 the test suite structure.
 
 . Test Purpose: Verify that this requirement is satisfied.
