--- a/sources/sections/03-norm-refs.adoc
+++ b/sources/sections/03-norm-refs.adoc
@@ -19,6 +19,8 @@ supplied definitions used in this document.
 
 * [[[iso19105:2022,ISO 19105:2022]]], Geographic information — Conformance and testing
 
+* [[[ogc-modspec,OGC 08-131r3]]], https://portal.ogc.org/files/?artifact_id=34762[The Specification Model — A Standard for Modular specifications]
+
 * [[[omg-infrastructure,OMG UML/2.5/Infrastructure]]], OMG Unified Modeling Language (OMG UML), Infrastructure, V2.5, OMG Document Number: formal/2015-03-01, Standard document URL: https://www.omg.org/spec/UML/2.5
 
 * [[[omg-superstructure,OMG UML/2.4.1/Superstructure]]], OMG Unified Modeling Language (OMG UML), Superstructure, V2.4.1, OMG Document Number: formal/2012-05-07; Standard document URL: https://www.omg.org/spec/UML/ISO/19505-2/PDF
