--- a/sources/sections/03-norm-refs.adoc
+++ b/sources/sections/03-norm-refs.adoc
@@ -5,7 +5,7 @@
 // [.boilerplate]
 // === {blank}
 
-While the ModSpec references UML, SQL and XML, and their technical specifications,
+While the ModSpec references UML, SQL, JSON, and XML, and their technical specifications,
 no requirements are derived from these documents. While this document
 may be applied to extensions of those standards, conformance to them is the purview
 of those standards, not the ModSpec.
