Minor edit - missing word

--- a/sources/requirements/core/REQ6_requirements-grouped.adoc
+++ b/sources/requirements/core/REQ6_requirements-grouped.adoc
@@ -6,5 +6,5 @@
 ====
 [%metadata]
 identifier:: /req/core/requirements-grouped
-part:: Requirements _SHALL_ be grouped together in clauses (numbered sections) of the document in a strictly hierarchical manner, consistent with requirements classes.
+part:: Requirements _SHALL_ be grouped together in clauses (numbered sections) of the document in a strictly hierarchical manner, consistent with the requirements classes.
 ====
